# adbmonster

./: README.md  components.json  index.html  package-lock.json  package.json  启动调试.bat  打包.bat
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scrcpy/: placeholder.txt
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/adb/: manager.rs  mod.rs  parser.rs  process.rs
src-tauri/src/commands/: apps.rs  devices.rs  files.rs  logcat.rs  media.rs  mod.rs  scrcpy.rs  tray.rs
src/components/: DeviceSelector.tsx  FileManager.tsx  LogViewer.tsx  PackageList.tsx  QrPairingDialog.tsx  StatusBar.tsx  ToolPanel.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  select.tsx
src/hooks/: useDevices.ts  useLogcat.ts  useMedia.ts  useTheme.ts
src/lib/: tauri.ts
src/stores/: appStore.ts  deviceStore.ts  logStore.ts
src/types/: adb.ts
