[package]
name = "adb-monster"
version = "0.1.0"
description = "adb缝合怪 - ADB all-in-one tool"
authors = ["rendongfang"]
edition = "2021"

[lib]
name = "adb_monster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "process", "sync", "time"] }
which = "7"
chrono = "0.4"
